--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 Django==5.2
 django-cors-headers==4.7.0
+gunicorn==23.0.0
+packaging==24.2
 PyMySQL==1.1.1
 sqlparse==0.5.3
 typing_extensions==4.13.2
