--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "flowbite": "^3.1.2",
+    "flowbite-react": "^0.11.7",
     "lucide-react": "^0.487.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "sass": "^1.86.3",
