--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 asgiref==3.8.1
 Django==5.2
 django-cors-headers==4.7.0
-gunicorn==23.0.0
+django-rest-framework==0.1.0
+djangorestframework==3.16.0
 packaging==24.2
 PyMySQL==1.1.1
+RouterOS-api==0.21.0
 sqlparse==0.5.3
 typing_extensions==4.13.2
 whitenoise==6.9.0
-
-djangorestframework~=3.16.0
+gunicorn
