--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-asgiref==3.8.1
 Django==5.2
-django-cors-headers==4.7.0
-django-rest-framework==0.1.0
 djangorestframework==3.16.0
-packaging==24.2
 PyMySQL==1.1.1
-RouterOS-api==0.21.0
-sqlparse==0.5.3
-typing_extensions==4.13.2
-whitenoise==6.9.0
-gunicorn
+requests~=2.32.3
+python-decouple~=3.8
+cryptography~=44.0.2
