--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.8",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "framer-motion": "^12.9.2",
     "lucide-react": "^0.487.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
