--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DJANGO_SECRET_KEY="m0UkAmgcSVuxoHIqo9zDn3fvJFju7uB0x75iCs3QtiLLvs4VTr"
 FERNET_KEY="rH5e31KQjtM56glGxTdfb003lk7v3UEnzFLs-tefhLU="
+INTASEND_PUBLISHABLE_KEY = "ISPubKey_test_bf9cd546-8017-4af8-bf73-3e754887d3ff"
+INTASEND_SECRET_KEY="ISSecretKey_test_0b3dce15-b552-4492-8777-80cb83fdcfab"
