--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.9.2",
+    "intasend-inlinejs-sdk": "^4.0.7",
     "lucide-react": "^0.487.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
