--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DJANGO_SECRET_KEY="m0UkAmgcSVuxoHIqo9zDn3fvJFju7uB0x75iCs3QtiLLvs4VTr"
 FERNET_KEY="rH5e31KQjtM56glGxTdfb003lk7v3UEnzFLs-tefhLU="
+SENDGRID_API_KEY=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
