--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "crypto-js": "^4.2.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "framer-motion": "^12.9.2",
+    "js-crypto-aes": "^1.0.6",
     "lucide-react": "^0.487.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
