--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DJANGO_SECRET_KEY="m0UkAmgcSVuxoHIqo9zDn3fvJFju7uB0x75iCs3QtiLLvs4VTr"
-FERNET_KEY="rH5e31KQjtM56glGxTdfb003lk7v3UEnzFLs-tefhLU="
-SENDGRID_API_KEY=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
+DJANGO_SECRET_KEY=
+FERNET_KEY=
+SENDGRID_API_KEY=
 
-INTASEND_PUBLISHABLE_KEY = "ISPubKey_test_bf9cd546-8017-4af8-bf73-3e754887d3ff"
-INTASEND_SECRET_KEY="ISSecretKey_test_0b3dce15-b552-4492-8777-80cb83fdcfab"
+INTASEND_PUBLISHABLE_KEY = ""
+INTASEND_SECRET_KEY=
