--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DJANGO_SECRET_KEY=
-FERNET_KEY=
-SENDGRID_API_KEY=
-
-INTASEND_PUBLISHABLE_KEY = ""
-INTASEND_SECRET_KEY=
+#DJANGO_SECRET_KEY=
+#FERNET_KEY=
+#SENDGRID_API_KEY=
+#
+#INTASEND_PUBLISHABLE_KEY = ""
+#INTASEND_SECRET_KEY=
